css consolidate update

--- a/assets/css/all-title-big.css
+++ b/assets/css/all-title-big.css
@@ -99,7 +99,7 @@
   .pg-header-elements {
     padding: 90px 6%; } }
 .content-page-title .highlight {
-  color: #fd5721;
+  color: var(--homenet-orange);
   margin-left: 1px;
   font-size: 0.8em; }
   
