--- a/assets/css/jquery-ui.css
+++ b/assets/css/jquery-ui.css
@@ -279,11 +279,11 @@
 .ui-widget-header {
 	border: 1px solid #e78f08;
 	background: #f6a828 url("../images/date-picker/ui-bg_gloss-wave_35_f6a828_500x100.png") 50% 50% repeat-x;
-	color: #ffffff;
+	color: #fff;
 	font-weight: bold;
 }
 .ui-widget-header a {
-	color: #ffffff;
+	color: #fff;
 }
 
 /* Interaction states
@@ -328,7 +328,7 @@
 .ui-widget-content .ui-state-active,
 .ui-widget-header .ui-state-active {
 	border: 1px solid #fbd850;
-	background: #ffffff url("../images/date-picker/ui-bg_glass_65_ffffff_1x400.png") 50% 50% repeat-x;
+	background: #fff url("../images/date-picker/ui-bg_glass_65_ffffff_1x400.png") 50% 50% repeat-x;
 	font-weight: bold;
 	color: #eb8f00;
 }
@@ -358,17 +358,17 @@
 .ui-widget-header .ui-state-error {
 	border: 1px solid #cd0a0a;
 	background: #b81900 url("../images/date-picker/ui-bg_diagonals-thick_18_b81900_40x40.png") 50% 50% repeat;
-	color: #ffffff;
+	color: #fff;
 }
 .ui-state-error a,
 .ui-widget-content .ui-state-error a,
 .ui-widget-header .ui-state-error a {
-	color: #ffffff;
+	color: #fff;
 }
 .ui-state-error-text,
 .ui-widget-content .ui-state-error-text,
 .ui-widget-header .ui-state-error-text {
-	color: #ffffff;
+	color: #fff;
 }
 .ui-priority-primary,
 .ui-widget-content .ui-priority-primary,
