--- a/assets/css/base-content.css
+++ b/assets/css/base-content.css
@@ -1,6 +1,6 @@
 :root {
   /* Common */
-  --primary-color: #fd5721;
+  --homenet-orange: var(--homenet-orange);
   /* Additional Colors */
   --white-section: #fff;
   --gray-section: #f8f8f8;
@@ -44,8 +44,8 @@
   /* Functional Colors */
   --black_default: #232323;
   /* ## ## ## ## ## ## ## ## ## ## */
-  --ui-color-main: #2d2e33;
-  --ui-color-sub: #2c393c; }
+  --footer-color-main: #2d2e33;
+  --footer-color-sub: #2c393c; }
   
   :root {
   --blue: #3498db;
@@ -136,11 +136,11 @@ dl {
   margin-bottom: 1rem; }
   
   a {
-  color: #85c3ae;
+  color: var(--homenet-teal);
   text-decoration: none;
   background-color: transparent; }
   a:hover {
-    color: #b8dcd0;
+    color: var(--homenet-light-teal);
     text-decoration: underline; }
 	
 	img {
@@ -366,7 +366,7 @@ h5, .h5 {
     text-decoration: none;
     transition: all 0.2s ease-in-out; }
     .breadcrumb-item a:hover {
-      color: #85c3ae; }
+      color: var(--homenet-teal); }
   .breadcrumb-item.active {
     color: #a1a1a1; }
   .breadcrumb-item + .breadcrumb-item {
