--- a/assets/css/homenet-navbar.css
+++ b/assets/css/homenet-navbar.css
@@ -42,7 +42,7 @@ Default settings
     position: absolute;
     width: 100%;
     height: 76px;
-    background-color: #364a4e;
+    background-color: var(--homenet-dark-jade);
 }
 
 .homenet-header .container {
@@ -94,7 +94,7 @@ Default settings
     text-align: center;
     display: inline-block;
     padding: 22px 0px 28px 0px;
-    background: #fd5721;
+    background: var(--homenet-orange);
     width: 45%;
     position: relative;
     height: 76px;
@@ -120,7 +120,7 @@ Default settings
 }
 
 .homenet-header .logo:hover svg {
-    fill: #fd5721;
+    fill: var(--homenet-orange);
     transition: fill 0.3s ease;
         filter: drop-shadow(2px 1px 7px rgba(217, 95, 56, 0.60));
     -webkit-filter: drop-shadow(2px 1px 7px rgba(217, 95, 56, 0.60));
@@ -130,16 +130,16 @@ Default settings
     display: inline-block;
     padding: 19px;
     fill: #fff;
-    background-color: #364a4e;
+    background-color: var(--homenet-dark-jade);
 }
 
 .homenet-header .search:hover svg {
-    fill: #fd5721;
+    fill: var(--homenet-orange);
     transition: fill 0.3s ease;
 }
 
 .homenet-header .search:hover {
-    fill: #fd5721;
+    fill: var(--homenet-orange);
     background: #f7f7f7;
     -webkit-transition: background-color 250ms linear;
     -ms-transition: background-color 250ms linear;
@@ -231,7 +231,7 @@ Default settings
     letter-spacing: -1px;
     font-weight: 600;
     font-size: 14.5px;
-    color: #fd5721;
+    color: var(--homenet-orange);
 }
 
 .homenet-header .homenet-menu ul li>a {
@@ -344,7 +344,7 @@ Default settings
 
 .homenet-menu ul li.current-menu>a,
 .homenet-menu ul li:hover>a {
-    color: #fd5721;
+    color: var(--homenet-orange);
     background-color: #f6f6f6;
 }
 
@@ -411,7 +411,7 @@ Dark version navigation menu
 }
 
 .homenet-header.header-dark .burger-menu.menu-open .line-menu {
-    background-color: #fd5721;
+    background-color: var(--homenet-orange);
 }
 
 .header-dark .homenet-menu ul li>a {
@@ -420,7 +420,7 @@ Dark version navigation menu
 
 .header-dark .homenet-menu ul li.current-menu>a,
 .header-dark .homenet-menu ul li:hover>a {
-    color: #f76a3d;
+    color: var(--homenet-light-orange);
 }
 
 .header-dark .homenet-menu ul ul li>a {
@@ -494,7 +494,7 @@ Mega menu
 
 .homenet-menu .mega-menu-heading a:hover,
 .homenet-menu ul.mega-menu-list li a:hover {
-    color: #fd5721;
+    color: var(--homenet-orange);
 }
 
 .homenet-menu .mega-menu-thumbnail {
@@ -563,8 +563,8 @@ Media queries for responsive design
         float: left;
         border-left: 3px solid;
         border-right: 3px solid;
-        border-color: #fd5721;
-        background: #fd5721;
+        border-color: var(--homenet-orange);
+        background: var(--homenet-orange);
         box-sizing: border-box;
         -moz-box-sizing: border-box;
         -webkit-box-sizing: border-box;
@@ -629,7 +629,7 @@ Media queries for responsive design
 
     .header-dark .homenet-menu ul li.current-menu>a,
     .header-dark .homenet-menu ul li:hover>a {
-        color: #fd5721;
+        color: var(--homenet-orange);
         background-color: #313131;
     }
 }
@@ -703,7 +703,7 @@ Viewport Breakpoint
         text-align: center;
         line-height: 29px;
         display: block;
-        background-color: #fd5721;
+        background-color: var(--homenet-orange);
         font-weight: 600;
         float: left;
         top: -5px;
@@ -767,7 +767,7 @@ Viewport Breakpoint
 
     .homenet-menu ul li:hover>a .msg_count {
         background-color: #fff;
-        color: #fd5721;
+        color: var(--homenet-orange);
     }
 
     .homenet-menu {
@@ -960,7 +960,7 @@ Viewport Breakpoint
   Submenu
   ================================================ */
     .homenet-menu.submenu-top-border li>ul {
-        border-top: 2px solid #fd5721;
+        border-top: 2px solid var(--homenet-orange);
     }
 
     .homenet-menu.submenu-top-border li>ul ul {
